# mygcc-application

./: .gitignore  .gitmodules  .travis.yml  ATTRIBUTION.md  CMakeLists.txt  LICENSE  README.md  facade.pro  facade.rc  requirements.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: Deployment.md
exampledata/: classBIOL101Ahomework.JSON  user.JSON  userchapel.JSON  userinsurance.JSON
ext/: CMakeLists.txt
include/: Color.hpp  FileManager.hpp  FileNotFound.hpp  Font.hpp  Logging.hpp  OS.hpp  ProfileImage.hpp  RunGuard.hpp  SlackFeedback.hpp  Updater.hpp  mainwindow.hpp  slack_feedback.hpp
include/api/: JavaIntegration.hpp
include/data/: Chapel.hpp  Classmate.hpp  Homework.hpp  Login.hpp  Schedule.hpp  User.hpp
include/types/: Assignment.hpp  ClassTime.hpp  Course.hpp  NetworkFile.hpp  Profile.hpp  Student.hpp
include/ui/: ClassroomView.hpp  ClassroomViewItem.hpp  Color.hpp  CourseAssignmentItem.hpp  CourseView.hpp  FeedbackListItem.hpp  FeedbackPanel.hpp  Font.hpp  GridItem.hpp  Image.hpp  InfoGrid.hpp  LoginButton.hpp  LoginPanel.hpp  MainWindow.hpp  ProfileImage.hpp  ProfilePanel.hpp  SidebarIcon.hpp  SidebarLabel.hpp  SidebarListItem.hpp  SidebarPanel.hpp  StudentImage.hpp
package/: README.md
package/config/: config.xml  installcontroller.qs  installericon.icns
res/: Info.plist.in  icons.json
res/img/: default_user.psd
scripts/: Doxyfile  build.sh  build_ubuntu.sh  clean.sh  install-qt  qt-installer-noninteractive.qs  slack_feedback.sh
src/: CMakeLists.txt  Color.cpp  FileManager.cpp  Font.cpp  Logging.cpp  MainWindow.cpp  OS.cpp  ProfileImage.cpp  ProfilePanel.cpp  RunGuard.cpp  SlackFeedback.cpp  Updater.cpp  facade.pro  main.cpp  mainwindow.cpp  mainwindow.h  slack_feedback.cpp  slack_feedback.sh
src/api/: JavaIntegration.cpp
src/data/: Chapel.cpp  Classmate.cpp  Homework.cpp  Login.cpp  Schedule.cpp  User.cpp
src/types/: Assignment.cpp  ClassTime.cpp  Course.cpp  NetworkFile.cpp  Profile.cpp  Student.cpp
src/ui/: ClassroomView.cpp  ClassroomViewItem.cpp  Color.cpp  CourseAssignmentItem.cpp  CourseView.cpp  FeedbackListItem.cpp  FeedbackPanel.cpp  Font.cpp  GridItem.cpp  Image.cpp  InfoGrid.cpp  LoginButton.cpp  LoginPanel.cpp  MainWindow.cpp  ProfileImage.cpp  ProfilePanel.cpp  SidebarIcon.cpp  SidebarLabel.cpp  SidebarListItem.cpp  SidebarPanel.cpp  StudentImage.cpp
test/: usercontact.JSON  userschedule.JSON
